--- a/package.json
+++ b/package.json
@@ -1,15 +1,44 @@
 {
   "name": "blockchain-developer-bootcamp",
+  "description": "Decentralized Ethereum Token Exchange",
+  "author": "github.com/ryanosaur",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@truffle/hdwallet-provider": "^1.2.3",
+    "apexcharts": "^3.25.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "bootstrap": "^4.6.0",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "chai-bignumber": "^3.0.0",
+    "dotenv": "^8.2.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
+    "openzeppelin-solidity": "^3.4.1",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "reselect": "^4.0.0",
+    "solidity-coverage": "^0.7.16",
+    "truffle": "^5.2.4",
+    "truffle-flattener": "^1.5.0",
+    "truffle-hdwallet-provider-privkey": "^0.3.0",
+    "web-vitals": "^1.0.1",
+    "web3": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
